tests/snapshots/regression/nested__call_index_member_chain.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/nested/call_index_member_chain.flx
exit_code: 1

[ 1 of 12] Compiling  Assert
[ 2 of 12] Compiling  Debug
[ 3 of 12] Compiling  Array
[ 4 of 12] Compiling  List
[ 5 of 12] Compiling  Either
[ 6 of 12] Compiling  IO
[ 7 of 12] Compiling  Math
[ 8 of 12] Compiling  Numeric
[ 9 of 12] Compiling  Option
[10 of 12] Compiling  Primops
[11 of 12] Compiling  String
• 2 errors • tests/fixtures/nested/call_index_member_chain.flx
error[E430]: Could Not Infer Concrete Type

Flux could not determine a concrete result type for this definition before code generation. Internal detail: definition `0` still has unresolved type variable #10602 at the backend representation.

  tests/fixtures/nested/call_index_member_chain.flx:1:1
  |
1 | foo(1, bar(2, baz(3)))[0].qux(4);
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Add a type annotation or make the expression's result type unambiguous.


error[E004]: Undefined Variable

I can't find a value named `foo`.

  tests/fixtures/nested/call_index_member_chain.flx:1:1
  |
1 | foo(1, bar(2, baz(3)))[0].qux(4);
  | ^^^

Hint:
  Define it first: let foo = ...;

Found 2 errors.
